--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col">
-            <label>Choose project name</label>
+            <label style="font-size: 18px">Choose project name</label>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <select class="project-select">
+            <select style="width: 100%" class="form-control project-select">
                 @{
                     int i = 0;
                     foreach (var pr in Model)
