--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <select style="width: 100%" class="form-control project-select">
+            <select id="project-select" style="width: 100%" class="form-control">
                 @{
                     int i = 0;
                     foreach (var pr in Model)
@@ -30,9 +30,22 @@
             </select>
         </div>
     </div>
+    <div class="row" style="margin-top: 15px">
+        <div class="col">
+            <label style="font-size: 18px">Issues list:</label>
+        </div>
+    </div>
     <div class="row">
         <div class="col">
-            <table class="table">
+            <table class="table table-striped">
+                <colgroup>
+                    <col span="1" style="width: 10%;" />
+                    <col span="1" style="width: 25%;" />
+                    <col span="1" style="width: 25%;" />
+                    <col span="1" style="width: 10%;" />
+                    <col span="1" style="width: 20%;" />
+                    <col span="1" style="width: 10%;" />
+                </colgroup>
                 <thead>
                     <tr>
                         <th scope="col">№</th>
@@ -40,16 +53,157 @@
                         <th scope="col">Description</th>
                         <th scope="col">Priority</th>
                         <th scope="col">Assignee</th>
-                        <th scope="col"></th>                       
+                        <th scope="col"></th>
                     </tr>
                 </thead>
-                <tbody class="result">             
-                </tbody>
+                <tbody id="result"></tbody>
             </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <button style="float: right; margin-right: 3em" data-target="#createIssueModal" data-toggle="modal" class="btn btn-primary" id="btnCreateIssue">Create</button>
+        </div>
+    </div>
+    <!--ModalEdit-->
+    <div class="modal fade" id="editIssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-lg modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3 class="modal-title" style="font-weight: bold" id="exampleModalLongTitle">Edit Issue</h3>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <button id="btnSaveEdit" class="btn btn-primary">Save</button>
+                            </div>
+                            <div class="col-md-4">
+                                <select id="selectType" style="width: 200px" class="form-control">
+                                </select>
+                            </div>
+                            <div class="col-md-2">
+                                <label style="visibility: hidden" id="lblProjectId"></label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <h5 style="font-weight: bold">Project Name:</h5>
+                                <label id="lblProjectName" class="form-control"/>
+                            </div>
+                            <div class="col-md-3">
+                                <h5 style="font-weight: bold">Number</h5>
+                                <label id="lblId" class="form-control"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5 style="font-weight: bold">Summary:</h5>
+                                <input id="inpSummary" type="text" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h5 style="font-weight: bold">Description:</h5>
+                                <textarea id="txtareaDescr" rows="5" class="form-control"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5 style="font-weight: bold">Assignee:</h5>
+                                <label id ="lblAssignee" class="form-control"></label>
+                            </div>
+                            <div class="col-md-6">
+                                <h5 style="font-weight: bold">Priority:</h5>
+                                <select id="selectPriority" class="form-control">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>        
+            </div>
+        </div>
+    </div>
+    <!--ModalCreate-->
+    <div class="modal fade" id="createIssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-lg modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3 class="modal-title" style="font-weight: bold" id="exampleModalLongTitle">New Issue</h3>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <button id="btnSaveCreate" class="btn btn-primary">Save</button>
+                            </div>
+                            <div class="col-md-4">
+                                <select id="selectTypeCreate" disabled style="width: 200px" class="form-control"></select>
+                            </div>
+                            <div class="col-md-2">
+                                <label style="visibility: hidden" id="lblProjectIdCreate"></label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5 style="font-weight: bold">Project Name:</h5>
+                                <label id="lblProjectNameCreate" class="form-control" />
+                            </div>
+                            @*<div style="margin-left: 30px" class="col-md-3">
+                                <h5 style="font-weight: bold">Number</h5>
+                                <label id="lblId" class="form-control" />
+                            </div>*@
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h5 style="font-weight: bold">Summary:</h5>
+                                <input id="inpSummaryCreate" type="text" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h5 style="font-weight: bold">Description:</h5>
+                                <textarea id="txtareaDescrCreate" class="form-control"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5 style="font-weight: bold">Assignee:</h5>
+                                <input id="inpAssigneeCreate" class="form-control"/>
+                            </div>
+                            <div class="col-md-6">
+                                <h5 style="font-weight: bold">Priority:</h5>
+                                <select id="selectPriorityCreate" class="form-control"></select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/jquery")
+   <script src="@Url.Content("~/Scripts/myscript.js")" type="text/javascript"></script>
 }
