--- a/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
@@ -3,16 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - IssueTracker</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
-                
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="navbar-header">             
+                @Html.ActionLink("IssueTracker", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div style="float: right" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,7 +24,6 @@
     <div class="container body-content">
         @RenderBody()
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
