--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col">
-            <label style="font-size: 18px">Choose project name</label>
+            <label style="font-size: 18px">Choose project name:</label>
         </div>
     </div>
     <div class="row">
@@ -62,11 +62,11 @@
     </div>
     <div class="row">
         <div class="col">
-            <button style="float: right; margin-right: 3em" data-target="#createIssueModal" data-toggle="modal" class="btn btn-primary" id="btnCreateIssue">Create</button>
+            <button style="float: right; margin-right: 3em" data-target="#IssueModal" data-toggle="modal" class="btn btn-primary" id="btnCreateIssue">Create</button>
         </div>
     </div>
-    <!--ModalEdit-->
-    <div class="modal fade" id="editIssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <!--Modal-->
+    <div class="modal fade" id="IssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
         <div class="modal-lg modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -87,7 +87,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-1">
-                                <button id="btnSaveEdit" class="btn btn-primary">Save</button>
+                                <button id="btnSave" disabled class="btn btn-primary">Save</button>
                             </div>
                             <div class="col-md-4">
                                 <select id="selectType" style="width: 200px" class="form-control">
@@ -100,11 +100,11 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <h5 style="font-weight: bold">Project Name:</h5>
-                                <label id="lblProjectName" class="form-control"/>
+                                <input id="inpProjectName" class="form-control"/>
                             </div>
                             <div class="col-md-3">
                                 <h5 style="font-weight: bold">Number</h5>
-                                <label id="lblId" class="form-control"/>
+                                <input id="inpId" class="form-control"/>
                             </div>
                         </div>
                         <div class="row">
@@ -122,7 +122,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h5 style="font-weight: bold">Assignee:</h5>
-                                <label id ="lblAssignee" class="form-control"></label>
+                                <input id ="inpAssignee" class="form-control"/>
                             </div>
                             <div class="col-md-6">
                                 <h5 style="font-weight: bold">Priority:</h5>
@@ -135,75 +135,7 @@
             </div>
         </div>
     </div>
-    <!--ModalCreate-->
-    <div class="modal fade" id="createIssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-        <div class="modal-lg modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="modal-title" style="font-weight: bold" id="exampleModalLongTitle">New Issue</h3>
-                            </div>
-                            <div class="col-md-6">
-                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-1">
-                                <button id="btnSaveCreate" class="btn btn-primary">Save</button>
-                            </div>
-                            <div class="col-md-4">
-                                <select id="selectTypeCreate" disabled style="width: 200px" class="form-control"></select>
-                            </div>
-                            <div class="col-md-2">
-                                <label style="visibility: hidden" id="lblProjectIdCreate"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h5 style="font-weight: bold">Project Name:</h5>
-                                <label id="lblProjectNameCreate" class="form-control" />
-                            </div>
-                            @*<div style="margin-left: 30px" class="col-md-3">
-                                <h5 style="font-weight: bold">Number</h5>
-                                <label id="lblId" class="form-control" />
-                            </div>*@
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <h5 style="font-weight: bold">Summary:</h5>
-                                <input id="inpSummaryCreate" type="text" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <h5 style="font-weight: bold">Description:</h5>
-                                <textarea id="txtareaDescrCreate" class="form-control"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5 style="font-weight: bold">Assignee:</h5>
-                                <input id="inpAssigneeCreate" class="form-control"/>
-                            </div>
-                            <div class="col-md-6">
-                                <h5 style="font-weight: bold">Priority:</h5>
-                                <select id="selectPriorityCreate" class="form-control"></select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 @section Scripts {
-   <script src="@Url.Content("~/Scripts/myscript.js")" type="text/javascript"></script>
+   <script src="@Url.Content("~/Scripts/index.js")" type="text/javascript"></script>
 }
