Edited Kanban.cshtml, kanban.js and HomeController.The model Issue_for_Kanban has been deleted

--- a/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - IssueTracker</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/utils/Draggable.min.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
