Added drug'n'drop feature to Kanban page. Edited kanban.js

--- a/IssuesTracker/IssuesTracker/Views/Home/Kanban.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Kanban.cshtml
@@ -42,16 +42,17 @@
         </div>
     </div>
     <div class="row" >
+        <div class="bounds"></div>
         <div class="col-sm-4">
-            <ul class="list-group kanban-ul" id="newIssues">
+            <ul class="list-group kanban-ul connectedSortable" id="newIssues">
             </ul>
         </div>
         <div class="col-sm-4">
-            <ul class="list-group kanban-ul" id="inprogressIssues">
+            <ul class="list-group kanban-ul connectedSortable" id="inprogressIssues">
             </ul>
         </div>
         <div class="col-sm-4">
-            <ul class="list-group kanban-ul" id="doneIssues">
+            <ul class="list-group kanban-ul connectedSortable" id="doneIssues">
             </ul>
         </div>
     </div>
