--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -62,80 +62,12 @@
     </div>
     <div class="row">
         <div class="col">
-            <button style="float: right; margin-right: 3em" data-target="#IssueModal" data-toggle="modal" class="btn btn-primary" id="btnCreateIssue">Create</button>
+            <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
         </div>
     </div>
-    <!--Modal-->
-    <div class="modal fade" id="IssueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-        <div class="modal-lg modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="modal-title" style="font-weight: bold" id="exampleModalLongTitle">Edit Issue</h3>
-                            </div>
-                            <div class="col-md-6">
-                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-1">
-                                <button id="btnSave" disabled class="btn btn-primary">Save</button>
-                            </div>
-                            <div class="col-md-4">
-                                <select id="selectType" style="width: 200px" class="form-control">
-                                </select>
-                            </div>
-                            <div class="col-md-2">
-                                <label style="visibility: hidden" id="lblProjectId"></label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <h5 style="font-weight: bold">Project Name:</h5>
-                                <input id="inpProjectName" class="form-control"/>
-                            </div>
-                            <div class="col-md-3">
-                                <h5 style="font-weight: bold">Number</h5>
-                                <input id="inpId" class="form-control"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h5 style="font-weight: bold">Summary:</h5>
-                                <input id="inpSummary" type="text" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <h5 style="font-weight: bold">Description:</h5>
-                                <textarea id="txtareaDescr" rows="5" class="form-control"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5 style="font-weight: bold">Assignee:</h5>
-                                <input id ="inpAssignee" class="form-control"/>
-                            </div>
-                            <div class="col-md-6">
-                                <h5 style="font-weight: bold">Priority:</h5>
-                                <select id="selectPriority" class="form-control">
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>        
-            </div>
-        </div>
+    <div class="modal fade" id="issueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     </div>
 </div>
 @section Scripts {
-   <script src="@Url.Content("~/Scripts/index.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/index.js")" type="text/javascript"></script>
 }
