Partial views have been modified.  Scripts were moved into separate files.

--- a/IssuesTracker/IssuesTracker/Views/Home/Kanban.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Kanban.cshtml
@@ -45,5 +45,5 @@
     </div>
 </div>
 @section Scripts {
-    <script src="@Url.Content("~/Scripts/kanban.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/kanban.js")" type="text/javascript"></script>
 }
