--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -62,12 +62,19 @@
     </div>
     <div class="row">
         <div class="col">
-            <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            @if (Model.Count > 0)
+            {
+                <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            }
+            else
+            {
+                <button style="float: right; margin-right: 3em" data-target="#issueModal" disabled data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            }
         </div>
     </div>
     <div class="modal fade" id="issueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     </div>
 </div>
 @section Scripts {
-    <script src="@Url.Content("~/Scripts/index.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/index.js")" type="text/javascript"></script>
 }
