Authentication system implemented. New models for the authentication have been added. Login and Registry pages added.

--- a/IssuesTracker/IssuesTracker/Views/Home/GetGridIssues.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/GetGridIssues.cshtml
@@ -9,7 +9,16 @@
             <td>@issue.Description</td>
             <td>@issue.Priority</td>
             <td>@issue.Assignee</td>
-            <td><button class="btn btn-light btn-edit" value="@issue.Id" data-target="#issueModal" data-toggle="modal">Edit</button></td>
+            <td>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <button class="btn btn-light btn-edit" value="@issue.Id" data-target="#issueModal" data-toggle="modal">Edit</button>
+                }
+                else
+                {
+                    <button class="btn btn-light btn-edit" disabled value="@issue.Id" data-target="#issueModal" data-toggle="modal">Edit</button>
+                }
+            </td>
         </tr>
     }
 
