--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
     </div>
     <div class="row">
         <div class="col">
-            @if (Model.Count > 0 && User.Identity.IsAuthenticated)
+            @if (Model.Count > 0)
             {
                 <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
             }
