--- a/IssuesTracker/IssuesTracker/Views/Home/Login.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Login.cshtml
@@ -4,8 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
+<div class="row" style="margin-top: 20px">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
