--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-10">
             <select id="project-select" style="width: 100%" class="form-control">
                 @{
                     int i = 0;
@@ -29,6 +29,12 @@
                 }
             </select>
         </div>
+        @if (User.IsInRole("Team Leader"))
+        {
+            <div class="col-md-2">
+                <button style="float: right; margin-right: 3em" class="btn btn-primary" data-target="#projectModal" data-toggle="modal" id="createProject">Create project</button>
+            </div>
+        }
     </div>
     <div class="row" style="margin-top: 15px">
         <div class="col">
@@ -62,17 +68,43 @@
     </div>
     <div class="row">
         <div class="col">
-            @if (Model.Count > 0)
-            {
-                <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
-            }
-            else
-            {
-                <button style="float: right; margin-right: 3em" data-target="#issueModal" disabled data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
-            }
+            <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>     
         </div>
     </div>
     <div class="modal fade" id="issueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    </div>
+    <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3 class="modal-title" style="font-weight: bold" id="title">Create project</h3>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-3" style="margin-top: 5px">
+                            <span style="font-size: 16px; font-weight: bold">Project name:</span>
+                        </div>
+                        <div class="col-md-6">
+                            <input id="projectName" class="form-control" />
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="createPrj" data-dismiss="modal" class="btn btn-primary">Create</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 @section Scripts {
