--- a/IssuesTracker/IssuesTracker/Views/Home/Register.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Register.cshtml
@@ -36,7 +36,12 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.Role, new { @class = "col-md-3 control-label" })
                     <div class="col-md-9">
-                        @Html.DropDownListFor(m => m.Role, new SelectList( new string[] { "Developer", "TeamLead", "QA" }), new { @style = "margin-top: 5px" })
+                        <select class="form-control" id="Role" name="Role">
+                            @foreach(var role in new List<string>() { "Developer", "Team Leader", "QA" })
+                            {
+                                <option value="@role">@role</option>
+                            }
+                        </select>
                     </div>
                 </div>
                 <div class="form-group">
