--- a/IssuesTracker/IssuesTracker/Views/Account/Login.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="row" style="margin-top: 20px">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 <h4>Use a local account to log in.</h4>
