--- a/IssuesTracker/IssuesTracker/Views/Account/Register.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Account/Register.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div class="row" style="margin-top: 20px">
     <div class="col-md-8">
         <section id="registerForm">
-            @using (Html.BeginForm("Register", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 <h4>Create a new account</h4>
@@ -37,7 +36,7 @@
                     @Html.LabelFor(m => m.Role, new { @class = "col-md-3 control-label" })
                     <div class="col-md-9">
                         <select class="form-control" id="Role" name="Role">
-                            @foreach(var role in new List<string>() { "Developer", "Team Leader", "QA" })
+                            @foreach (var role in new List<string>() { "Team Leader", "Developer", "QA" })
                             {
                                 <option value="@role">@role</option>
                             }
@@ -56,7 +55,3 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-
-
-
-
