--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<IssuesTracker.Models.Project>
+﻿@using IssuesTracker.Models
+@model List<Project>
 @{
     ViewBag.Title = "Home Page";
 }
@@ -14,7 +15,7 @@
             <select id="project-select" style="width: 100%" class="form-control">
                 @{
                     int i = 0;
-                    foreach (var pr in Model)
+                    foreach (Project pr in Model)
                     {
                         if (i == 0)
                         {
