--- a/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Shared/_Layout.cshtml
@@ -15,11 +15,14 @@
             </div>
             <div style="float: right" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Kanban", "Kanban", "Home")</li>   
-                    <li>@Html.ActionLink("Management", "Management", "Home")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Kanban", "Kanban", "Home")</li>
+                        if (User.IsInRole("Manager"))
+                        {
+                            <li>@Html.ActionLink("Management", "Management", "Home")</li>
+                        }
                         <li>@Html.ActionLink(User.Identity.Name, "Index", "Home", new { @style = "pointer-events: none; cursor: default;" })</li>
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                     }
