--- a/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Index.cshtml
@@ -69,13 +69,50 @@
     </div>
     <div class="row">
         <div class="col">
-            <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            @if (Model.Count > 0)
+            {
+                <button style="float: right; margin-right: 3em" data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            }
+            else
+            {
+                <button style="float: right; margin-right: 3em" disabled data-target="#issueModal" data-toggle="modal" class="btn btn-primary" id="createIssue">Create</button>
+            }
         </div>
     </div>
     <div class="modal fade" id="issueModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     </div>
     <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-        @Html.Partial("ProjectModal")
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3 class="modal-title" style="font-weight: bold" id="title">Create project</h3>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="button" class="close" style="margin-top: 5px" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-3" style="margin-top: 5px">
+                            <span style="font-size: 16px; font-weight: bold">Project name:</span>
+                        </div>
+                        <div class="col-md-6">
+                            <input id="projectName" class="form-control" />
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="createPrj" data-dismiss="modal" class="btn btn-primary">Create</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 @section Scripts {
