--- a/IssuesTracker/IssuesTracker/Views/Home/Management.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Home/Management.cshtml
@@ -29,7 +29,7 @@
                         <th scope="col">Projects</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="managementTable">
                     @foreach (User_for_View user in Model)
                     {
                         if (user.Role != "Manager")
