--- a/IssuesTracker/IssuesTracker/Views/Account/Register.cshtml
+++ b/IssuesTracker/IssuesTracker/Views/Account/Register.cshtml
@@ -1,57 +1,66 @@
 ﻿@model IssuesTracker.Models.IdentityViews.RegisterViewModel
 
 @{
-    ViewBag.Title = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "Register";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row" style="margin-top: 20px">
-    <div class="col-md-8">
-        <section id="registerForm">
-            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Create a new account</h4>
-                <hr />
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Role, new { @class = "col-md-3 control-label" })
-                    <div class="col-md-9">
-                        <select class="form-control" id="Role" name="Role">
-                            @foreach (var role in (ViewBag.Roles as List<string>))
-                            {
-                                <option value="@role">@role</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-default" value="Register" />
-                    </div>
-                </div>
-            }
-        </section>
-    </div>
+	<div class="col-md-8">
+		<section id="registerForm">
+			@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+			{
+				@Html.AntiForgeryToken()
+				<h4>Create a new account</h4>
+				<hr />
+				@Html.ValidationSummary("", new { @class = "text-danger" })
+				<div class="form-group">
+					@Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
+					<div class="col-md-9">
+						@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+					</div>
+				</div>
+				<div class="form-group">
+					@Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
+					<div class="col-md-9">
+						@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+					</div>
+				</div>
+				<div class="form-group">
+					@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
+					<div class="col-md-9">
+						@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+					</div>
+				</div>
+				<div class="form-group">
+					@Html.LabelFor(m => m.Role, new { @class = "col-md-3 control-label" })
+					<div class="col-md-9">
+						@if ((ViewBag.Roles as List<string>).First() != "--None--")
+						{
+							<select class="form-control" id="Role" name="Role">
+								@foreach (var role in (ViewBag.Roles as List<string>))
+								{
+									<option value="@role">@role</option>
+								}
+							</select>
+						}
+						else
+						{
+							<select class="form-control" id="Role" name="Role">
+								<option value="Admin">Admin</option>
+							</select>
+						}
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-md-offset-2 col-md-10">
+						<input type="submit" class="btn btn-default" value="Register" />
+					</div>
+				</div>
+			}
+		</section>
+	</div>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+	@Scripts.Render("~/bundles/jqueryval")
 }
